--- a/pottercast/pc.html
+++ b/pottercast/pc.html
@@ -10,7 +10,7 @@
             padding: 0;
             font-family: Arial, sans-serif;
             overflow-x: hidden; /* Prevent horizontal scroll on small screens */
-            background-color: #f0f0f0; /* Set a background color for the body */
+            background-color: #edd6c7; /* Set a background color for the body */
         }
 
         #container {
@@ -101,7 +101,7 @@
             background-color: white;
         }
 
-        @media (min-width: 600px) {
+        @media (min-width: 800px) {
             /* Show background image on screens larger than 799px */
             #background-image {
                 display: block;
