--- a/pottercast/index.html
+++ b/pottercast/index.html
@@ -9,8 +9,8 @@
         margin: 0;
         padding: 0;
         font-family: Arial, sans-serif;
-        overflow-x: hidden; /* Prevent horizontal scroll on small screens */
-        background-color: #edd6c7; /* Set a background color for the body */
+        overflow-x: hidden;
+        background-color: #edd6c7;
       }
 
       #container {
@@ -22,7 +22,7 @@
         flex-direction: column;
         align-items: start;
         position: relative;
-        overflow-y: auto; /* Enable vertical scrolling for the container */
+        overflow-y: auto;
         max-height: 100vh;
         padding-left: 20px;
         padding-right: 20px;
@@ -53,23 +53,15 @@
         direction: rtl;
       }
 
-      #background-image {
-        width: 100%;
-        height: 100%;
-        display: none; /* Hide by default on small screens */
-        position: absolute;
-        top: 0;
-        left: 100%; /* Align to the right of the container */
-        transform: translateX(-100%);
-        object-fit: cover; 
-      }
-
       #title {
         width: 100%;
         font-size: 40px;
         font-weight: bold;
         margin-top: 30px;
         text-align: right;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         color: white;
       }
 
@@ -101,20 +93,79 @@
         background-color: white;
       }
 
+      .icon {
+        width: 20px;
+        height: 20px;
+        margin-right: 6px;
+        color: white;
+      }
+
+      #icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+      }
+
+      body {
+        background-image: none;
+        background-repeat: no-repeat, repeat;
+        background-position: right top;
+      }
       @media (min-width: 800px) {
-        /* Show background image on screens larger than 799px */
-        #background-image {
-          display: block;
+        body {
+          background-image: url("pc.jpeg");
         }
       }
     </style>
   </head>
   <body>
     <div id="content">
-      <img id="background-image" src="pc.jpeg" alt="Background Image" />
       <div id="container">
         <div id="header">
-          <p id="title">פוטרקאסט</p>
+          <div id="title">
+            <div id="icons">
+              <a
+                href="https://www.facebook.com/pottercast.podcast"
+                target="_blank"
+                class="icon"
+              >
+                <svg
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fab"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 512 512"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                href="https://www.youtube.com/@user-sh2tx4pe6j"
+                target="_blank"
+                class="icon"
+              >
+                <svg
+                  aria-hidden="true"
+                  focusable="false"
+                  data-prefix="fab"
+                  role="img"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 576 512"
+                >
+                  <path
+                    fill="currentColor"
+                    d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+            פוטרקאסט
+          </div>
           <p class="subtitle">בראי של ינפתא</p>
           <p class="seperator"></p>
           <p class="subsubtitle">מילים: מורן קלפר, יותם רוזנטל, נועם כליפה</p>
@@ -169,7 +220,13 @@
             הלב שלי הוא כמו, כמו,<br /><br />
 
             הרכבת להוגוורטס כבר יצאה<br />
-            אני והיא כבר לא נהיה ביחד<br />
+            אני והיא כבר לא נהיה ביחד<br /><br /><br />
+          </p>
+          <p class="seperator"></p>
+          <p>
+            שירה: נועם כליפה<br />
+            גיטרות: אסף טל<br />
+            עיבוד והפקה: יותם רוזנטל<br />
           </p>
         </div>
       </div>
