fix bg image height

--- a/pottercast/index.html
+++ b/pottercast/index.html
@@ -111,6 +111,7 @@
         background-image: none;
         background-repeat: no-repeat, repeat;
         background-position: right top;
+        background-size: auto 100%;
       }
       @media (min-width: 800px) {
         body {
